# MiniProj

./: CMakeLists.txt  README.md  cmd.cpp  cmd.hpp  image.hpp  imagefunc.cpp  main.cpp  main2.cpp
